Fix overflow

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -58,6 +58,7 @@ body {
   font-family: 'Quicksand';
   background-color: var(--bg);
   height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
